api: Add routes to set and get a coil by name
